tests/negative/lexer/double-underscore.orng
fn main() -> Int {
    let x__lol = 4
    x__lol
}